add search component to repo and create component.html file

--- a/resource/组件.md
+++ b/resource/组件.md
@@ -61,8 +61,10 @@ html结构
         <li class="fa fa-thumbs-o-up"></li>
     </div>
 </div>
+```
 **8.前台标签组件**
 html结构
+```html
 <span class="fd-tag">
     PPT设计
 </span>
@@ -108,3 +110,7 @@ html结构
     <span>管理员配置</span>
 </div>
 ```
+***
+##任务分配表
+-----------------------------------
+| 序号 | 
